# Sustenet

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  Sustenet.csproj  Sustenet.licenseheader  Sustenet.sln  Sustenet.sln.licenseheader  SustenetClient.csproj  SustenetUnity.csproj  SustenetUnity.sln  build.zig  build.zig.zon  docfx.json  manifest.json  xrefmap.yml
.github/: FUNDING.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docfx-build-publish.yml  sustenet-dotnet-core.yml  sustenet-publish-rust.yml  sustenet-rust.yml  sustenet-zig.yml  sustenetclient-dotnet-core.yml
Managed/: Sustenetce.cs
Native/: Makefile
Native/src/: main.c
Properties/: launchSettings.json
cfg/: ClusterServer.config  MasterServer.config
docfx/: docfx.json  index.html
docfx/_site/: CODE_OF_CONDUCT.html  README.html  index.html  manifest.json  xrefmap.yml
docfx/_site/api/: NDesk.Options.Option.html  NDesk.Options.OptionAction-2.html  NDesk.Options.OptionContext.html  NDesk.Options.OptionException.html  NDesk.Options.OptionSet.html  NDesk.Options.OptionValueCollection.html  NDesk.Options.OptionValueType.html  NDesk.Options.html  Sustenet.Clients.Client.Connection.html  Sustenet.Clients.Client.ConnectionType.html  Sustenet.Clients.Client.PacketHandler.html  Sustenet.Clients.Client.html  Sustenet.Clients.ClusterClient.html  Sustenet.Clients.Peer.html  Sustenet.Clients.html  Sustenet.Events.BaseEvent-1.html  Sustenet.Events.BaseEvent-2.html  Sustenet.Events.BaseEvent.html  Sustenet.Events.html  Sustenet.Network.ClientPackets.html  Sustenet.Network.ClusterPackets.html  Sustenet.Network.Packet.html  Sustenet.Network.ServerPackets.html  (+27 more)
docfx/api/: .manifest  NDesk.Options.Option.html  NDesk.Options.Option.yml  NDesk.Options.OptionAction-2.html  NDesk.Options.OptionAction-2.yml  NDesk.Options.OptionContext.html  NDesk.Options.OptionContext.yml  NDesk.Options.OptionException.html  NDesk.Options.OptionException.yml  NDesk.Options.OptionSet.ActionOption-1.html  NDesk.Options.OptionSet.ActionOption-2.html  NDesk.Options.OptionSet.ActionOption.html  NDesk.Options.OptionSet.html  NDesk.Options.OptionSet.yml  NDesk.Options.OptionValueCollection.html  NDesk.Options.OptionValueCollection.yml  NDesk.Options.OptionValueType.html  NDesk.Options.OptionValueType.yml  NDesk.Options.html  NDesk.Options.yml  Sustenet.Clients.Client.Connection.html  Sustenet.Clients.Client.Connection.yml  Sustenet.Clients.Client.ConnectionType.html  Sustenet.Clients.Client.ConnectionType.yml  Sustenet.Clients.Client.PacketHandler.html  Sustenet.Clients.Client.PacketHandler.yml  Sustenet.Clients.Client.html  Sustenet.Clients.Client.yml  Sustenet.Clients.ClusterClient.html  Sustenet.Clients.ClusterClient.yml  Sustenet.Clients.Peer.html  Sustenet.Clients.Peer.yml  Sustenet.Clients.html  Sustenet.Clients.yml  Sustenet.Events.BaseEvent-1.html  Sustenet.Events.BaseEvent-1.yml  Sustenet.Events.BaseEvent-2.html  Sustenet.Events.BaseEvent-2.yml  Sustenet.Events.BaseEvent.html  Sustenet.Events.BaseEvent.yml  (+107 more)
docfx/articles/: intro.html  structure.md  toc.yml
docs/: INFO.md
rust/: .gitignore  Cargo.toml  Config.toml
rust/auth/: Cargo.toml  README.md
rust/auth/src/: lib.rs
rust/client/: Cargo.toml  README.md
rust/client/src/: client.rs  lib.rs  main.rs
rust/cluster/: Cargo.toml  README.md
rust/cluster/src/: cluster.rs  cluster_client.rs  lib.rs  main.rs  master_connection.rs
rust/master/: Cargo.toml  README.md
rust/master/src/: lib.rs  main.rs  master.rs  master_client.rs  master_mio.rs  master_test.rs  security.rs  server_client.rs
rust/master/src/tests/: mod.rs  test_dyn_invoke.rs  test_listener.rs  test_maps.rs  test_master.rs  test_mio.rs  test_server.rs  test_stress.rs  test_tcplistener.rs  test_threaded_server.rs
rust/shared/: Cargo.toml  README.md
rust/shared/src/: config.rs  lib.rs  logging.rs  macros.rs  network.rs  packets.rs  security.rs  server.rs  utils.rs
rust/src/: app.rs  lib.rs  main.rs  options.rs
rust/src/app/: app.rs  cluster.rs  master.rs  mod.rs
rust/src/clients/: client.rs  cluster_client.rs  mod.rs  server_client.rs
rust/src/core/: mod.rs
rust/src/core/spawning/: mod.rs  player.rs  spawnee.rs
rust/src/events/: mod.rs
rust/src/macros/: defer.rs  logging.rs  mod.rs
rust/src/master/: master_server.rs  mod.rs
rust/src/network/: mod.rs  packet.rs
rust/src/transport/: base_client.rs  base_server.rs  mod.rs  thread_manager.rs
rust/src/utils/: constants.rs  macros.rs  mod.rs
rust/src/world/: cluster_info.rs  mod.rs
rust/sustenet/: Cargo.toml  README.md
rust/sustenet/src/: lib.rs
rust_example/: Cargo.toml  Config.toml
rust_example/src/: main.rs
src/: App.config  Options.cs  Options.zig  Sustenet.cs  main.zig  sustenet.zig
src/Client/: Client.cs
src/Clients/: Client.cs  Client.zig  ClusterClient.cs  Peer.cs  client.zig  clients.zig
src/Cluster/: Cluster.cs
src/Core/: core.zig
src/Events/: Action.zig  BaseEvent.cs  BaseEvent.zig  base_event.zig  events.zig
src/Fragment/: Fragment.cs
src/Master/: Master.cs  MasterServer.cs
src/Network/: NetworkLayer.cs  Packet.cs  Packet.zig  PacketTypes.cs  network.zig
src/Transport/: BaseClient.cs  BaseClient.zig  BaseClientHandler.cs  BaseServer.cs  BaseServer.zig  BaseServerHandler.cs  BaseTest.zig  ClientHandler.cs  ClusterHandler.cs  MasterHandler.cs  Protocols.cs  Protocols.zig  SNetSocket.cs  ServerHandler.cs  ThreadManager.cs  ThreadManager.zig  TransportLayer.cs  UDPSocket.cs  base_client.zig  base_server.zig  transport.zig
src/TransportLayer/: BaseServer.cs  SNetSocket.cs  Server.cs  TCPSocket.cs  TransportLayer.cs  UDPSocket.cs
src/Utils/: Config.cs  Constants.cs  Constants.zig  Extensions.zig  Security.cs  UMath.cs  Utilities.cs  Utilities.zig  utils.zig
src/World/: Cluster.cs  ClusterServer.cs  Fragment.cs  FragmentServer.cs  world.zig
tests/Utils/: Security.cs  SecurityTest.cs
zig/: build.zig  test_runner.zig
zig/cfg/: MasterServer.config
zig/docs/: INFO.md
zig/src/: app.zig  main.zig
(+96 files in other folders)
