[workspace.lints.rust]
unsafe_code = "forbid"

[workspace]
resolver = "2"

members = [
    "master",
    "cluster",
    "client",
    "shared",
    "auth",
    "sustenet",
]
exclude = ["backup"]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Quaint Studios", "Makosai"]
homepage = "https://github.com/Quaint-Studios/Sustenet"

[workspace.dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
config = "0.15.4"
ctrlc = "3.4.5"
dashmap = "6.1.0"
getrandom = "0.3.2"
lazy_static = "1.5.0"
tokio = { version = "1.41.1", default-features = false, features = [
    # "socket2",
    "macros",
    "rt-multi-thread",
    "net",
    # "sync",
    "io-util",
    "time",
] }
