[package]
name = "rust_example"
version = "0.1.0"
edition = "2024"
description = "Example Rust project using Sustenet"

[dependencies]
cluster = { version = "0.1.0", path = "../rust/cluster" }
shared = { version = "0.1.0", path = "../rust/shared" }
tokio = { version = "1.41.1", default-features = false, features = [
	"macros",
	"rt-multi-thread",
	"net",
	"sync",
	"io-util",
	"time",
] }
