[package]
name = "sustenet-client"
version = "0.1.0"
edition.workspace = true
description = "Sustenet client used to connect to the master and cluster servers."

license.workspace = true
authors.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
lazy_static.workspace = true
shared = { package = "sustenet-shared", path = "../shared", version = "*" }
tokio.workspace = true
