[package]
name = "sustenet-client"
version.workspace = true
edition.workspace = true
description = "Sustenet client used to connect to the master and cluster servers."

license.workspace = true
authors.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
lazy_static.workspace = true
shared = { package = "sustenet-shared", path = "../shared" }
tokio.workspace = true
