[package]
name = "sustenet-client"
version.workspace = true
edition.workspace = true
description = "Sustenet client used to connect to the master and cluster servers."

license.workspace = true
authors.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
bytes.workspace = true
sustenet-shared.workspace = true
tokio = { workspace = true, features = [
	# "socket2",
	"macros",
	"rt-multi-thread",
	"net",
	# "sync",
	"io-util",
	"time",
] }
