[package]
name = "sustenet-cluster"
version = "0.1.0"
edition.workspace = true
description = "Sustenet's cluster module that connects to the master server and accepts client connections after being registered."

license.workspace = true
authors.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
aes = "0.8.4"
dashmap.workspace = true
lazy_static.workspace = true
shared = { package = "sustenet-shared", path = "../shared", version = "0.1.0" }
tokio.workspace = true
public-ip = "0.2.2"
