[package]
name = "sustenet-cluster"
version.workspace = true
edition.workspace = true
description = "Sustenet's cluster module that connects to the master server and accepts client connections after being registered."

license.workspace = true
authors.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
aes.workspace = true
bytes.workspace = true
public-ip.workspace = true
sustenet-shared.workspace = true
tokio = { workspace = true, features = [
	# "socket2",
	"macros",
	"rt-multi-thread",
	"net",
	# "sync",
	"io-util",
	"time",
] }
