[package]
name = "sustenet-master"
version.workspace = true
edition.workspace = true
description = "Sustenet master server that accepts connections from cluster servers and clients. It also redirects clients to clusters."

license.workspace = true
authors.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
dashmap.workspace = true
getrandom.workspace = true
lazy_static.workspace = true
shared = { package = "sustenet-shared", path = "../shared" }
tokio.workspace = true
