[package]
name = "sustenet-master"
version.workspace = true
edition.workspace = true
description = "Sustenet master server that accepts connections from cluster servers and clients. It also redirects clients to clusters."

license.workspace = true
authors.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
bytes.workspace = true
dashmap.workspace = true
getrandom.workspace = true
lazy_static.workspace = true
sustenet-shared.workspace = true
tokio = { workspace = true, features = [
	# "socket2",
	"macros",
	"rt-multi-thread",
	"net",
	# "sync",
	"io-util",
	"time",
] }
