[package]
name = "sustenet-master"
version.workspace = true
edition.workspace = true
description = "Sustenet master server that accepts connections from cluster servers and clients. It also redirects clients to clusters."

license.workspace = true
authors.workspace = true
homepage.workspace = true

[lints]
workspace = true

[features]
ignored_tests = []

[dependencies]
env_logger = { version = "0.11.8", default-features = false}
dashmap = { version = "6.1.0" }
mio = { version = "1.0.3", features = ["os-poll", "net"] }
bytes.workspace = true
getrandom.workspace = true
sustenet-shared.workspace = true
tokio = { workspace = true, features = [
	# "socket2",
	"macros",
	"rt-multi-thread",
	"net",
	# "sync",
	"io-util",
	"time",
] }
