[package]
name = "sustenet-shared"
version.workspace = true
edition.workspace = true
description = "Sustenet shared library that contains the common code used by all modules."

license.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
aes-gcm = { workspace = true }
base64.workspace = true
config = { workspace = true }
ctrlc = { workspace = true }
tokio = { version = "1.41.1", features = ["sync"] }
