[package]
name = "sustenet"
version = "0.1.0"
edition.workspace = true
description = "A networking solution for MMOs and large multiplayer games. It includes a master server, cluster servers, a client library, and authentication."

license.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
sustenet-auth = { path = "../auth", optional = true, version = "0.1.0" }
sustenet-client = { path = "../client", optional = true, version = "0.1.0" }
sustenet-cluster = { path = "../cluster", optional = true, version = "0.1.0" }
sustenet-master = { path = "../master", optional = true, version = "0.1.0" }
sustenet-shared = { path = "../shared", optional = true, version = "0.1.0" }

[lints]
workspace = true

# This should load auth, client, cluster, master, and shared as dependencies with the ability to choose which ones to include with features.

[features]
default = []
auth = ["sustenet-auth"]
client = ["sustenet-client"]
cluster = ["sustenet-cluster"]
master = ["sustenet-master"]
shared = ["sustenet-shared"]
full = ["auth", "client", "cluster", "master", "shared"]
