[package]
name = "sustenet"
version.workspace = true
edition.workspace = true
description = "A networking solution for MMOs and large multiplayer games. It includes a master server, cluster servers, a client library, and authentication."

license.workspace = true
authors.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
sustenet-auth = { optional = true, workspace = true }
sustenet-client = { optional = true, workspace = true }
sustenet-cluster = { optional = true, workspace = true }
sustenet-master = { optional = true, workspace = true }
sustenet-shared = { optional = true, workspace = true }

[features]
default = ["full"]
auth = ["sustenet-auth"]
client = ["sustenet-client"]
cluster = ["sustenet-cluster"]
master = ["sustenet-master"]
shared = ["sustenet-shared"]
full = ["auth", "client", "cluster", "master", "shared"]
